syntax = "proto3";

package auth;

option go_package = "github.com/maksroxx/DeliveryService/proto/auth;authpb";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateRequest {}

message AuthResponse {
  string user_id = 1;
  string token = 2;
}

message ValidateResponse {
  string user_id = 1;
  string valid = 2;
}
